<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_onBackground"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/buttonProgrammatically"
        android:layout_width="241dp"
        android:layout_height="69dp"
        android:backgroundTint="@color/md_theme_inverseSurface_mediumContrast"
        android:onClick="onActivity2"
        android:text="@string/Run1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeInputs"
        tools:ignore="MissingConstraints" />

    <RelativeLayout
        android:id="@+id/relativeInputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="76dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textFIO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FullName"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/text_size_large" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textFIO"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@color/material_dynamic_neutral_variant20"
            android:hint="@string/FullNameText"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/material_dynamic_neutral70"
            android:textSize="@dimen/text_size_small"
            tools:ignore="LabelFor,VisualLintTextFieldSize" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
